# themis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  helloworld.py  notes.txt  pyproject.toml  release-please-config.json
.claude/skills/review-canary/: SKILL.md
.github/workflows/: ci.yml  release.yml
.themis/: config.yaml  review.md
_port_source/: pr-review-SKILL.md
_port_source/src/reviewbot/: codex.py  config.py  events.py  jobs.py  (+5 more)
docs/: bootstrap.md  canary-probe.md  configuration.md  contributing-engines.md  doctrine.md  headless.md  learnings.md  local-tunnel.md  security.md  server-deploy.md  skill-canary-probe.md
examples/themis/: config.yaml  review.md
src/themis/: __main__.py  agent.py  app.py  batch_reviews.py  bootstrap.py  codex.py  config.py  events.py  learning_service.py  learnings.py  output.py  prompts.py  queue.py  remote.py  review_service.py  router.py  security.py  service.py  trusted_context.py
tests/: test_agent.py  test_app.py  test_batch_reviews.py  test_bootstrap.py  test_codex.py  test_config.py  test_events.py  test_github_auth.py  test_github_client.py  test_learning_service.py  test_learnings.py  test_main.py  test_output.py  test_prompts.py  test_queue.py  test_release_lockfile_contract.py  test_remote.py  test_review_service.py  test_router.py  test_security.py  test_service.py  test_trusted_context.py  test_workspace.py
tests/engines/: test_claude.py  test_codex.py  test_glm.py  test_kimi.py  test_openrouter.py  test_qwen.py  test_registry.py
(+31 files in other folders)
