[project]
name = "themis"
version = "0.2.0"
description = "Self-hosted GitHub PR review bot powered by the Codex CLI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.28",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "cryptography>=43",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/themis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
